# pybackendtrip

./: .env.example  .gitignore  .replit  API_FRONTEND.md  Dockerfile  LICENSE  README.md  auth.py  check_and_seed.py  check_env.py  main.py  pyproject.toml  railway.json  render.yaml  replit.md  requirements.txt  setup_database.py  test_db_connection.py
app/: main.py
app/api/: deps.py
app/api/routes/: health.py  routes.py  trips.py
app/core/: config.py  db.py
app/models/: __init__.py  route.py  trip.py  user.py
app/schemas/: route.py  trip.py  user.py
attached_assets/: Pasted-Backend-en-Python-FastAPI-asyncpg-main-py-Crea-una-carp_1768440080268.txt  Pasted-Stack-que-vamos-a-usar-Para-tu-caso-API-pura-sin-HTML-s_1768439000930.txt
sql/: migration_mvp_plus.sql  schema.sql  seed.sql
