[project]
name = "realgo-mvp"
version = "0.2.0"
description = "API REST para gestión de rutas y viajes de transporte - RealGo MVP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "RealGo Team" }
]
keywords = ["fastapi", "transport", "api", "asyncpg", "postgresql"]

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "asyncpg>=0.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
